--- a/tex/Part2/Outer_Tracker_Lumi.tex
+++ b/tex/Part2/Outer_Tracker_Lumi.tex
@@ -46,8 +46,9 @@ In the case of 6 ladders per DTC this corresponds to a data readout rate of ~496
 For the total of 156 OT histograms, the total data rate received by the BRIL-DAQ is approximately 18.8 Mbps.
 
 
+\clearpage
 
-\begin{figure}[htp]
+\begin{figure}[t]
 \centering
 \begin{subfigure}
   \centering
@@ -67,7 +68,7 @@ For the total of 156 OT histograms, the total data rate received by the BRIL-DAQ
 
 \begin{figure}[hbtp]
 \centering
-\includegraphics[width=.65\linewidth]{tex/Part2/fig/OT/OT-DAQoverview.png}
+\includegraphics[width=.85\linewidth]{tex/Part2/fig/OT/OT-DAQoverview.png}
 \caption{
   Design of the Phase II Outer Tracker frontend (FE) and backend (BE) electronics~\cite{CERN-LHCC-2017-009}.  
 }   
@@ -75,7 +76,7 @@ For the total of 156 OT histograms, the total data rate received by the BRIL-DAQ
 \end{figure}
 
 
-
+\clearpage
 
 \input{tex/Part2/Outer_Tracker_Lumi_perf}
 
