--- a/tex/Part2/DT.tex
+++ b/tex/Part2/DT.tex
@@ -37,18 +37,14 @@
 
 During Run 2, counting of muon track candidates from the CMS Level 1 trigger system, the Barrel Muon Track Finder (BMTF),
 has proven to be useful for the luminosity systematics estimation due its excellent linearity and stability \cite{LUM-17-001}.
-The observable used was the barrel track sorter rate integrating BMTF track candidates
- over the entire orbit and over one lumi section ($\sim$23 s) period.
-The statistical precision of this counter for the Run 2 instantaneous luminosity was of order 0.2\%.
-This counter was recorded by the BRIL-DAQ in real time,
-however was of limited use for online luminosity measurement due to the
-lack of per bunch information and relatively long integration time.
-The per bunch luminosity uncertainty with the BMTF tracks at the HL-LHC instantaneous luminosity is expected to be of the order of 8\%,
-which does not provide enough precision for an online luminometer and does not allow for an independent calibration
-with the vdM scans nor long term stability corrections from the emmittance scans.
+The observable used was the barrel track sorter rate integrating BMTF track candidates over the entire orbit and over one lumi section ($\sim$23 s) period.
+%The statistical precision of this counter for the Run 2 instantaneous luminosity of  $2\times10^{34}\ \text{cm}^{-2}\text{s}^{-1}$ was of order 0.2\% per orbit per lumisection.
+This counter was recorded by the BRIL-DAQ in real time and had a statistical precision of about 0.2\% per orbit per lumi section for the Run 2 instantaneous luminosity of  $2\times10^{34}\ \text{cm}^{-2}\text{s}^{-1}$.
+%however was of limited use for online luminosity measurement due to the lack of per bunch information and relatively long integration time.
+The  uncertainty with the BMTF tracks at the HL-LHC instantaneous luminosity of $7.5\times10^{34}\ \text{cm}^{-2}\text{s}^{-1}$
+is expected to be of the order of 25\% per bunch per second, which does not provide enough precision for an online luminometer.
 Below we describe an improved luminometer design based on muon trigger primitives which will be available 
-from the Phase II backend of the  barrel detector for each of the Muon Drift Tube (DT) chambers,
-and provides higher count rates per bunch crossing.
+from the Phase II backend of the barrel detector for each of the Muon Drift Tube (DT) chambers, and provides higher count rates per bunch crossing.
 
 
 \section{Detector Description and Trigger Primitives}
@@ -58,15 +54,20 @@ A total of 250 chambers are distributed in 5 wheels (YB=0,$\pm$1,$\pm$2) and fou
 a layout of the entire  CMS muon system is shown in Figure~\ref{fig:DT_layout}.
 The RPC chambers are also visible in this diagram as layers RB1-RB4 in front of the DT chambers.
 
-Hits from the DT, RPC, and HO detectors will be combined to reconstruct muon track segments (trigger primitives) per DT chamber as part of the  Level 1 muon reconstruction system in Phase-2 \cite{CERN-LHCC-2017-012}.
+Hits from the DT, RPC, and HO detectors will be combined to reconstruct muon track segments (trigger primitives)
+per DT chamber as part of the  Level 1 muon reconstruction system in Phase-2 \cite{CERN-LHCC-2017-012}.
 The rates of these trigger primitives have been studied using Run 2 data.
 Figure~\ref{fig:DT_rates} shows the rates for the YB+2  chambers,
-the values have been extrapolated up to the expected HL-LHC instantaneous luminosity of  $7.5\times10^{34}\ \text{cm}^{-2}\text{s}^{-1}$ from the measured values in Run 2 data.
+the values have been extrapolated up to the expected HL-LHC instantaneous luminosity
+of  $7.5\times10^{34}\ \text{cm}^{-2}\text{s}^{-1}$ from the measured values in Run 2 data.
 We observe that the chambers in the first radial layer MB1 detect the highest rate
 and the rate decreases to less than 10\% at the outermost layer,
 this behaviour is consistent with a significant contribution of particles from jet punch-through observed by the inner layers.
-In the MB4 layer we also observe a phi asymmetry with higher rates on the top of the CMS detector (Sectors 3-5), believed to be due to machine induced backgrounds,
+In the MB4 layer we also observe a phi asymmetry with higher rates on the top of the CMS detector (Sectors 3-5),
+believed to be due to machine induced or cavern backgrounds,
 for this reason we expect to exclude this layer from the final luminosity calculation as the rates are not expected to always scale linearly with the number of IP collisions. 
+
+
 
 
 \begin{figure}[hbtp]
@@ -81,15 +82,7 @@ for this reason we expect to exclude this layer from the final luminosity calcul
 \label{fig:DT_layout}
 \end{figure}
 
-
-\begin{figure}[hbtp]
-\centering
-\includegraphics[width=.8\linewidth]{tex/Part2/fig/DT/DT-RatesExtrapolated.png}
-\caption{L1 trigger primitive rates expected for HL-LHC instantenous luminosity conditions for the DT chambers in the wheel YB+2.} 
-\label{fig:DT_rates}
-\end{figure}
-
-
+\clearpage
 
 \section{Data Acquisition}
 
@@ -103,10 +96,12 @@ and will allow for significant improvements in the trigger primitive reconstruct
 through improved timing resolution as well as improved spatial resolution. 
 
 
-For the online luminosity measurement, the BRIL Histogramming firmware described in Chapter~\ref{sec:BRILDAQ} operating in synchronous mode will be installed as part of the backend Layer 1 processor firmware.
+For the online luminosity measurement, the BRIL Histogramming firmware described in Chapter~\ref{sec:BRILDAQ}
+operating in synchronous mode will be installed as part of the backend Layer 1 processor firmware.
 This histogramming module will access and count the list of trigger primitives in parallel to the CMS L1 trigger stream
-and produce a histogram with counts per bunch crossing (3564 bins) at 1 second integration intervals.
-Based on the expected number of trigger primitive counts per bunch crossing, the required memory per histogram is estimated at 28 Kb, requiring a minimal amount of the L1 processor resources. 
+and produce a histogram with counts per bunch crossing (3564 bins) at approximately 1 second integration intervals.
+Based on the expected number of trigger primitive counts per bunch crossing, the required memory per histogram is estimated at 28 Kb,
+requiring a minimal amount of the L1 processor resources. 
 The histograms  will be transferred to the BRIL-DAQ system as part of the IPBus network traffic used for the slow control the DT backend.
 The total data rate expected for the DT luminometer (250 histograms) at the BRIL-DAQ end is aproximately 7.1 Mbps.
 As for the other luminometers, the individual histograms will be merged inside the BRIL-DAQ accounting for possible background subtraction and filtering of any misbehaving chambers.
@@ -118,6 +113,24 @@ A backend prototype (AB7) based on legacy TwinMux boards is currently used for e
 Since 2020, a test version of the BRIL Histogramming firmware has been installed in the AB7 backend and is expected to record data during Run 3.
 
 
+\begin{figure}[hbtp]
+\centering
+\includegraphics[width=.8\linewidth]{tex/Part2/fig/DT/DT-RatesExtrapolated.png}
+\caption{L1 trigger primitive rates expected for HL-LHC instantenous luminosity conditions for the DT chambers in the wheel YB+2.} 
+\label{fig:DT_rates}
+\end{figure}
+
+\begin{figure}[hbtp]
+\centering
+\includegraphics[width=.7\linewidth]{tex/Part2/fig/DT/DT-DAQ-Phase1_vs_Phase2.png}
+\caption{Current partition of the DT system readout electronics (left) and Phase-2 upgrade design (right) using On-Board Electronics for DT (OBDT).
+  The muon trigger primitives are produced by the L1 processors.
+}   
+\label{fig:DT_DAQ2}
+\end{figure}
+
+
+\clearpage
 
 \section{Expected Performance}
 
@@ -126,7 +139,7 @@ and below 500 kHz per station at the inner MB layers.
 At these rates the counting of trigger primitives should remain linear up to high pileup, a necesary property for precision luminosity measurement.
 Figure~\ref{fig:DT_linearity} shows the dependence of the number of DT trigger primitives on the instantenous luminosity
 observed using Run 2 data up to about $2\times10^{32}$ cm$^{-2}$ s$^{-1}$.
-A very linear behaviour is observed, the deviations from linearity obtained from this data are less than XX\%.
+A very linear behaviour is observed, the deviations from linearity obtained from this data are less than \textcolor{red}{ XX\%}.
 
 Another important aspect is the statistical precision during normal Physics running as well as during the vdM scans used to obtain the calibration constant.
 To estimate the statistical precision we use the trigger primitive rates previously extrapolated to the HL-LHC luminosity conditions.
@@ -139,8 +152,6 @@ while for vdM a precision of 0.36\%  meeting the requirements for the calibratio
 The final precision of this luminometer will depend additionally on the ability to handle any backgrounds and keep a stable operation of the muon detector and DAQ over entire run periods.
 
 
-\clearpage
-
 %\begin{figure}[hbtp]
 %\centering
 %\includegraphics[width=.65\linewidth]{tex/Part2/fig/DT/DT-DAQoverview.png}
@@ -148,20 +159,13 @@ The final precision of this luminometer will depend additionally on the ability 
 %\label{fig:DT_DAQ}
 %\end{figure}
 
-\begin{figure}[hbtp]
-\centering
-\includegraphics[width=.7\linewidth]{tex/Part2/fig/DT/DT-DAQ-Phase1_vs_Phase2.png}
-\caption{Current partition of the DT system readout electronics (left) and Phase-2 upgrade design (right) using On-Board Electronics for DT (OBDT).
-  The muon trigger primitives are produced by the L1 processors.
-}   
-\label{fig:DT_DAQ2}
-\end{figure}
-
 
 \begin{figure}[hbtp]
 \centering
-\includegraphics[width=.7\linewidth]{tex/Part2/fig/DT/DT-Linearity.png}
-\caption{L1 trigger primitive rates for one DT chamber (YBXX-SXX-MBXX) as a function of instantenous luminosity measured by the HF luminometer in one Physics run during 2018.} 
+\includegraphics[width=.49\linewidth]{tex/Part2/fig/DT/DT-Linearity.png}
+\includegraphics[width=.35\linewidth]{DT-Linearity-residuals.png}
+\caption{L1 trigger primitive rates for one DT chamber ( \textcolor{red}{YBXX-MBXX-SXX}) as a function of instantenous luminosity (left) measured in one Physics run during 2018
+and relative deviations from the linear fit (right).} 
 \label{fig:DT_linearity}
 \end{figure}
 
