--- a/tex/Part2/Outer_Tracker_Lumi.tex
+++ b/tex/Part2/Outer_Tracker_Lumi.tex
@@ -1,35 +1,43 @@
 \chapter{Outer Tracker Luminometer}
 
-The CMS Phase II Outer Tracker  (OT) system will provide a source of high rate physics objects: L1 track stubs.
-In its designed architecture these objects are sent to the L1 track reconstruction system at full 40 MHz frequency~\cite{CERN-LHCC-2017-009}.
-Studies of CMS Phase II simulations show excellent linearity in the counting of these objects up to pile-up of 200.
-These properties make this an excellent candidate for a precision luminometer.
+The CMS Phase-2 Outer Tracker  (OT) system will provide a source of high rate physics objects: L1 track stubs.
+In the OT DAQ architecture design, these objects are produced by the front-end electronics at full 40 MHz frequency~\cite{CERN-LHCC-2017-009}.
+Studies of CMS Phase-2 simulations show excellent linearity in the counting of these objects up to the HL-LHC pileup.
+These properties make this an excellent candidate for a precision luminometer with online functionality.
 In the following sections the detector layout, a preliminary design of the data acquisition system, and the expected perfomace are described.
 
 
 \section{Detector Layout and track stub reconstruction}
 
-The design of the Phase II OT is described in Chapter 3 of The Phase-2 Upgrade of the CMS Tracker TDR ~\cite{CERN-LHCC-2017-009} and shown below in Figure~\ref{fig:OT_layout}.
+
+The design of the Phase-2 OT detector is described in The Phase-2 Upgrade of the
+CMS Tracker Technical Design Report ~\cite{CERN-LHCC-2017-009} and shown here in Figure~\ref{fig:OT_layout}.
 The layout consists of 6 barrel layers (3 TBPS + 3 TB2S) and 5 endcap (TEDD) disks.
-The design of the CMS Phase II L1 trigger system requires the reconstruction of track stubs in the front-end of the OT in order to aid the track reconstruction for the L1 trigger.
-For the luminosity measurement, CMS detector simulations have been studied up to the Phase II expected pile-up,
-these studies described below show that the best precision can be obtained with the track stub counting from the barrel layer 6. 
-The OT barrel layer 6 consists of 78 ladders on each side of the detector, with each ladder containing 12 sensor modules as shown in Figure~\ref{fig:OT_ladder_stub}.
-The track stub reconstruction (right side of Figure ~\ref{fig:OT_ladder_stub}) is performed with firmware algorithms in the front-end electronics and transmitted to the back-end for all LHC bunch crossings.
+The design of the  Phase-2 L1 trigger system requires the reconstruction of track stubs
+in the front-end of the OT as a first step of the track reconstruction for the L1 trigger.
+For the luminosity measurement, CMS detector simulations have been studied up to the HL-LHC expected pile-up,
+these studies described below, show that the best precision can be obtained with the track stub counting from the barrel layer 6. 
+The OT barrel layer 6 consists of 78 sensor ``ladders'' on each side of the CMS detector,
+with each ladder containing 12 sensor modules as shown in Figure~\ref{fig:OT_ladder_stub}.
+To ensure hermetic coverage, the sensors are staggered along the z direction within the ladder,
+and the ladders are staggered along the phi direction as can be observed by the two radial positions in Figure~\ref{fig:OT_layout}.
+The track stub reconstruction (right side of Figure~\ref{fig:OT_ladder_stub}) is performed with firmware algorithms
+in the front-end electronics and the objects are transmitted to the back-end using high speed optical links.
 
-
-\begin{figure}[hbtp]
+\begin{figure}[h!]
 \centering
 \begin{subfigure}
 \centering
-\includegraphics[width=.9\linewidth]{tex/Part2/fig/OT/OT-longitudinal.png}
+\includegraphics[width=.95\linewidth]{tex/Part2/fig/OT/OT-longitudinal.png}
 \end{subfigure}
 \caption{
-  Longitudinal view of the CMS Phase II Outer Tracker layout  with two regions in the barrel (TB2S, TBPS) and the endcap region (TEDD).
-  For the luminosity measurement only the barrel outermost layer 6 in the TB2S part is used, this layer consists of 78 sensor ladders on each side of CMS.
+  Longitudinal view of the CMS Phase-2 Outer Tracker layout  with two regions in the barrel (TB2S, TBPS) and the endcap region (TEDD).
+  For the luminosity measurement the barrel outermost layer 6 in the TB2S part is used, this layer consists of 78 sensor ladders on each side of CMS.
 }
 \label{fig:OT_layout}
 \end{figure}
+
+
 
 
 \section{Data Acquisition}
@@ -37,18 +45,32 @@ The track stub reconstruction (right side of Figure ~\ref{fig:OT_ladder_stub}) i
 A design of the OT DAQ including both the front-end and back-end systems is shown in Figure~\ref{fig:OT_DAQ}.
 The back-end consists of Data, Trigger, and Control (DTC) boards which process the Trigger (TRIG) stream containting the track stub information. 
 The list of track stubs reconstructed for each bunch crossing is transmitted in blocks of 8 bunch crossings to the DTC boards.
-For the luminosity measurement, a specialized {\it BRIL Histogramming} firmware module has been developed which will count the number of track stubs in each bunch crossing and produce a histogram per orbit (3654 bunch crossings) at regular integration intervals of 1 second.
+For the online luminosity measurement, the BRIL Histogramming firmware described in Chapter~\ref{sec:BRILDAQ}
+will be installed in the DTC boards and run in synchronous mode
+to count the number of track stubs in each bunch crossing  at regular integration intervals of approximately 1 second.
+Each histogram module will be configured to integrate track stubs from one  sensor ladder.
+The DTC boards process 3-6 ladders, and will be configured with the corresponding number of histogram module instances.
+The readout of the luminosity histograms can be performed as part of the slow control of the OT back-end via IPBus network protocol
+to the BRIL-DAQ system for further processing and storage.
+The final calculation of the online luminosity is performed with software in the BRIL-DAQ and accounts for background subtractions (e.g. the afterglow physics noise)
+and will filter unstable detector parts while applying the necessary weights to the normalization.
+\textcolor{red}{(Here add a sentence about the availibility of this luminometer)}
 
-Each luminosity histogram will be configured to integrate track stubs from one 12 module ladder, the DTC boards process 3-6 ladders.
-The number of necessary instances of  {\it BRIL Histogramming} modules will be installed in the DTC boards and readout via IPBus network protocol to the BRIL-DAQ system for further processing and storage.
-Considering the rate of track stubs per ladder estimated with CMS simulations at pile-up of 200  (Figure~\ref{fig:OT_rates}),  the necessary memory per luminosity histogram is estimated using 32-bit memory words as follows: 3564 stub counting words (bins/orbit) + 9 words header + 2 words module mask + 192 error words (12 modules * 8 errors * 2 words/error) for a total of 3767 words per histogram.
-In the case of 6 ladders per DTC this corresponds to a data readout rate of ~496 kbps.
-For the total of 156 OT histograms, the total data rate received by the BRIL-DAQ is approximately 18.8 Mbps.
+Considering the rate of track stubs per ladder estimated with CMS simulations at pile-up of 200  (Figure~\ref{fig:OT_rates}),
+the number of stubs per ladder expected is approximately 90,000 per bunch per second, requiring 17 bits of memory per bin of the luminosity histogram.
+In addition, the stability of the modules must be tracked in time in order to maintain the necessary stability for the luminosity measurement.
+This will be acomplished by propagating errors from the OT frontend and backend to the luminosity histograms
+and filtering the modules in real time before computing the total ladder count, this will require additional memory for tracking these possible errors.
+The total necessary memory per luminosity histogram is estimated using 32-bit memory words as follows:
+3564 stub counting bins + 9 header + 2 static module mask + 192 online errors, for a total of 3767 words or 120 Kb per histogram.
+In the case of DTC's with 6 ladders readout at 1 second intervals this corresponds to a data bandwidth of ~720 Kbps.
+For the whole of the OT layer 6, a total of 156 lumi histograms, the total data rate received by the BRIL-DAQ will be approximately 18.8 Mbps.
+
 
 
 \clearpage
 
-\begin{figure}[t]
+\begin{figure}[h!]
 \centering
 \begin{subfigure}
   \centering
@@ -70,7 +92,8 @@ For the total of 156 OT histograms, the total data rate received by the BRIL-DAQ
 \centering
 \includegraphics[width=.85\linewidth]{tex/Part2/fig/OT/OT-DAQoverview.png}
 \caption{
-  Design of the Phase II Outer Tracker frontend (FE) and backend (BE) electronics~\cite{CERN-LHCC-2017-009}.  
+  Design of the Phase-2 Outer Tracker front-end and back-end electronics~\cite{CERN-LHCC-2017-009}.
+  The track stubs are reconstructed in the front-end, the back-end DTC boards will be configured with the BRIL luminosity histogramming firmware.  
 }   
 \label{fig:OT_DAQ}
 \end{figure}
