--- a/tex/Part2/DT.tex
+++ b/tex/Part2/DT.tex
@@ -39,12 +39,12 @@ During Run 2, counting of muon track candidates from the CMS Level 1 trigger sys
 has proven to be useful for the luminosity systematics estimation due its excellent linearity and stability \cite{LUM-17-001}.
 The observable used was the barrel track sorter rate integrating BMTF track candidates over the entire orbit and over one lumi section ($\sim$23 s) period.
 %The statistical precision of this counter for the Run 2 instantaneous luminosity of  $2\times10^{34}\ \text{cm}^{-2}\text{s}^{-1}$ was of order 0.2\% per orbit per lumisection.
-This counter was recorded by the BRIL-DAQ in real time and had a statistical precision of about 0.2\% per orbit per lumi section for the Run 2 instantaneous luminosity of  $2\times10^{34}\ \text{cm}^{-2}\text{s}^{-1}$.
+This counter was recorded by the BRILDAQ in real time and had a statistical precision of about 0.2\% per orbit per lumi section for the Run 2 instantaneous luminosity of  $2\times10^{34}\ \text{cm}^{-2}\text{s}^{-1}$.
 %however was of limited use for online luminosity measurement due to the lack of per bunch information and relatively long integration time.
 The  uncertainty with the BMTF tracks at the HL-LHC instantaneous luminosity of $7.5\times10^{34}\ \text{cm}^{-2}\text{s}^{-1}$
 is expected to be of the order of 25\% per bunch per second, which does not provide enough precision for an online luminometer.
 Below we describe an improved luminometer design based on muon trigger primitives which will be available 
-from the Phase II backend of the barrel detector for each of the Muon Drift Tube (DT) chambers, and provides higher count rates per bunch crossing.
+from the Phase-2 back end of the barrel detector for each of the Muon Drift Tube (DT) chambers, and provides higher count rates per bunch crossing.
 
 
 \section{Detector Description and Trigger Primitives}
@@ -63,8 +63,7 @@ of  $7.5\times10^{34}\ \text{cm}^{-2}\text{s}^{-1}$ from the measured values in 
 We observe that the chambers in the first radial layer MB1 detect the highest rate
 and the rate decreases to less than 10\% at the outermost layer,
 this behaviour is consistent with a significant contribution of particles from jet punch-through observed by the inner layers.
-In the MB4 layer we also observe a phi asymmetry with higher rates on the top of the CMS detector (Sectors 3-5),
-believed to be due to machine induced or cavern backgrounds,
+In the MB4 layer we observe a phi asymmetry with higher rates on the top of the CMS detector (Sectors 3-5), believed to be due to neutron backgrounds,
 for this reason we expect to exclude this layer from the final luminosity calculation as the rates are not expected to always scale linearly with the number of IP collisions. 
 
 
@@ -87,36 +86,37 @@ for this reason we expect to exclude this layer from the final luminosity calcul
 \section{Data Acquisition}
 
 The muon system readout electronics will undergo a complete upgrade for Phase-2 in order to cope with the higher data rates and L1 trigger demands.
-Figure~\ref{fig:DT_DAQ2} shows a comparison of the current components of the DT backend and the new architecture for Phase-2 \cite{CERN-LHCC-2017-012}.
-In the Phase-2 design, the frontend electronics are upgraded with On-Board Electronics for DT (OBDT) in new Minicrate 2 boards based on FPGA's.
+Figure~\ref{fig:DT_DAQ2} shows a comparison of the current components of the DT back end and the new architecture for Phase-2 \cite{CERN-LHCC-2017-012}.
+In the Phase-2 design, the front-end electronics are upgraded with On-Board Electronics for DT (OBDT) in new Minicrate 2 boards based on FPGA's.
 The data, including the full collection of DT, RPC, and HO hits, will be continously streamed via high speed optical
-links to the backend Layer 1 processor boards (L1 processors) where the trigger primitives are reconstructed.
+links to the back-end Layer 1 processor boards (L1 processors) where the trigger primitives are reconstructed.
 The L1 processors will consist of ATCA boards capable of processing full DT phi sectors, approximately 60 processor boards in total,
 and will allow for significant improvements in the trigger primitive reconstruction including improved bunch crossing identification
 through improved timing resolution as well as improved spatial resolution. 
 
 
 For the online luminosity measurement, the BRIL Histogramming firmware described in Chapter~\ref{sec:BRILDAQ}
-operating in synchronous mode will be installed as part of the backend Layer 1 processor firmware.
+operating in synchronous mode will be installed as part of the back-end Layer 1 processor firmware.
 This histogramming module will access and count the list of trigger primitives in parallel to the CMS L1 trigger stream
 and produce a histogram with counts per bunch crossing (3564 bins) at approximately 1 second integration intervals.
 Based on the expected number of trigger primitive counts per bunch crossing, the required memory per histogram is estimated at 28 Kb,
 requiring a minimal amount of the L1 processor resources. 
-The histograms  will be transferred to the BRIL-DAQ system as part of the IPBus network traffic used for the slow control the DT backend.
-The total data rate expected for the DT luminometer (250 histograms) at the BRIL-DAQ end is aproximately 7.1 Mbps.
-As for the other luminometers, the individual histograms will be merged inside the BRIL-DAQ accounting for possible background subtraction and filtering of any misbehaving chambers.
-Due to dependence on the CMS L1 trigger system, this luminometer will operate only during stable beams.
+The histograms  will be transferred to the BRILDAQ system as part of the IPBus network traffic used for the slow control the DT back-end.
+The total data rate expected for the DT luminometer (250 histograms) at the BRILDAQ end is aproximately 7.1 Mbps.
+As for the other luminometers, the individual histograms will be merged inside the BRILDAQ accounting for possible background subtraction and filtering of any misbehaving chambers.
+%Due to dependence on the CMS L1 trigger system, this luminometer will operate only during stable beams.
+\textcolor{red}{(here need a sentence about the availibility of this luminometer, e.g. when the HV will be ON, DAQ configured and trigger primitives generating, and lumi nibble counter for histogram reset)}
 
 A demonstrator of the DT Phase-2 electronics has been installed in one sector (YB+2, S12) to take data during Run 3.
 A total of 12 OBDT's were installed in the four MB layers, with the MB 3 and 4 equiped with a dual readout using both OBDT's and Legacy electronics.
-A backend prototype (AB7) based on legacy TwinMux boards is currently used for event matching and trigger primitive generation.
-Since 2020, a test version of the BRIL Histogramming firmware has been installed in the AB7 backend and is expected to record data during Run 3.
+A back-end prototype (AB7) based on legacy TwinMux boards is currently used for event matching and trigger primitive generation.
+Since 2020, a test version of the BRIL Histogramming firmware has been installed in the AB7 back end and is expected to record data during Run 3.
 
 
 \begin{figure}[hbtp]
 \centering
 \includegraphics[width=.8\linewidth]{tex/Part2/fig/DT/DT-RatesExtrapolated.png}
-\caption{L1 trigger primitive rates expected for HL-LHC instantenous luminosity conditions for the DT chambers in the wheel YB+2.} 
+\caption{L1 trigger primitive rates expected for HL-LHC instantenous luminosity conditions for the DT chambers in the wheel YB+2\textcolor{red}{(check if RPC/HO hits are included here)}.} 
 \label{fig:DT_rates}
 \end{figure}
 
