--- a/tex/Part2/DT.tex
+++ b/tex/Part2/DT.tex
@@ -1,4 +1,4 @@
-\chapter{Muon Drift Tube Luminometer}
+\chapter{\textcolor{red}{Muon Drift Tube Luminometer}}
 \label{sec:DT-lumi}
 %%
 %%For muon trigger stub counting, the use of trigger scouting methods prototyped at the end of Run 2
@@ -163,7 +163,7 @@ The final precision of this luminometer will depend additionally on the ability 
 \begin{figure}[hbtp]
 \centering
 \includegraphics[width=.49\linewidth]{tex/Part2/fig/DT/DT-Linearity.png}
-\includegraphics[width=.35\linewidth]{DT-Linearity-residuals.png}
+\includegraphics[width=.35\linewidth]{tex/Part2/fig/DT/DT-Linearity-residuals.png}
 \caption{L1 trigger primitive rates for one DT chamber ( \textcolor{red}{YBXX-MBXX-SXX}) as a function of instantenous luminosity (left) measured in one Physics run during 2018
 and relative deviations from the linear fit (right).} 
 \label{fig:DT_linearity}
