--- a/tex/Part2/DT.tex
+++ b/tex/Part2/DT.tex
@@ -1,4 +1,4 @@
-\chapter{\textcolor{red}{Muon Drift Tube Luminometer}}
+\chapter{\textcolor{red}{Luminosity measurement with the Muon DT system}}
 \label{sec:DT-lumi}
 %%
 %%For muon trigger stub counting, the use of trigger scouting methods prototyped at the end of Run 2
@@ -95,7 +95,7 @@ and will allow for significant improvements in the trigger primitive reconstruct
 through improved timing resolution as well as improved spatial resolution. 
 
 
-For the online luminosity measurement, the BRIL Histogramming firmware described in Chapter~\ref{sec:BRILDAQ}
+For the online luminosity measurement, the BRIL Histogramming firmware described in Chapter~\ref{ch:BRILDAQ}
 operating in synchronous mode will be installed as part of the back-end Layer 1 processor firmware.
 This histogramming module will access and count the list of trigger primitives in parallel to the CMS L1 trigger stream
 and produce a histogram with counts per bunch crossing (3564 bins) at approximately 1 second integration intervals.
