--- a/briltdr2021.bib
+++ b/briltdr2021.bib
@@ -24,6 +24,13 @@
 ---- Journal names: the journals generally include the series in the journal name, "Physical Review D", vol 5, rather than PR D5
 ---- >>> Please use the --preview option with the tdr script to perform a simple-minded reference check before uploading. This requires python.
 
+@techreport{CERN-LHCC-2020-004,
+      title         = "{The Phase-2 Upgrade of the CMS Level-1 Trigger}",
+      author        = "{CMS Collaboration}",
+      number        = "CERN-LHCC-2020-004, CMS-TDR-021",
+      year          = "2020",
+      url           = "http://cds.cern.ch/record/2714892",
+}
 
 @techreport{CERN-LHCC-2017-009,
       title         = "{The Phase-2 Upgrade of the CMS Tracker}",
@@ -32,6 +39,7 @@
       year          = "(2017)",
       url           = "https://cds.cern.ch/record/2272264",
 }
+
 
 
 @techreport{CERN-LHCC-2017-012,
